<resources>
    <string name="app_name">幸福i家</string>
    <string name="pls_input_mailbox_or_mobile">请使用手机号</string>
    <string name="pls_set_6_20_password">设置6-20位登录密码</string>
    <string name="confirm">确认</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="sorry_find_no_result">抱歉，未找到结果</string>
    <string name="search">搜  索</string>
    <string name="pls_input_keyword">请输入关键字</string>
    <string name="pls_input_username_or_mobile_num">请输入手机号码</string>
    <string name="pls_input_password">请输入密码</string>
    <string name="login">登  录</string>
    <string name="forget_password">忘记密码? </string>
    <string name="regest">注  册</string>
    <string name="visiter">游  客</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="community_mall">社区商城</string>
    <string name="community_notice">温馨提示</string>
    <string name="community_activity">家园活动</string>
    <string name="property_pay">物业缴费</string>
    <string name="repair_complain">报修投诉</string>
    <string name="appointment">预约访客</string>
    <string name="easy_service">便民服务</string>
    <string name="communicate">即时通讯</string>
    <string name="community_forum">社区论坛</string>
    <string name="community_info">社区分类信息</string>
    <string name="shop_arround">周边商家</string>
    <string name="express_receive">快递代收</string>
    <string name="menu_main_page">首页</string>
    <string name="menu_service">商城</string>
    <string name="menu_cart">购物车</string>
    <string name="menu_my">我的</string>
    <string name="sign_recieve">签  收</string>
    <string name="have_sign">已签收</string>
    <string name="havnt_sign">未签收</string>
    <string name="bus_info">公交出行</string>
    <string name="shop_info">便民商家</string>
    <string name="edu_info">教育资源</string>
    <string name="recommend_info">社区推荐</string>
    <string name="search_info">信息查询</string>
    <string name="easy_hotel">酒店</string>
    <string name="easy_life">生活服务</string>
    <string name="easy_landry">洗衣</string>
    <string name="easy_entertain">休闲娱乐</string>
    <string name="easy_movie">电影</string>
    <string name="easy_food">美食</string>
    <string name="easy_ktv">KTV</string>
    <string name="easy_coffee">咖啡</string>
    <string name="easy_gym">健身</string>
    <string name="easy_parking">停车</string>
    <string name="easy_facial">美容</string>
    <string name="easy_traval">旅游</string>
    <string name="sort_style">排序方式</string>
    <string name="shop_style">店铺分类</string>
    <string name="food">美食</string>
    <string name="movie">电影</string>
    <string name="takeout">外卖</string>
    <string name="hotel">酒店</string>
    <string name="shop_credit">商家信用：</string>
    <string name="resent_order_nums">最近订单数</string>
    <string name="all_comments">全部评价</string>
    <string name="man">人</string>
    <string name="shop_intro_title">店铺介绍</string>
    <string name="comment_detail_title">评价详细</string>
    <string name="search_shop_pro">搜索店内商品</string>
    <string name="zhi_fu_bao_pay_title">支付宝支付</string>
    <string name="zhi_fu_bao_pay_intro">安全快捷，可支持银行卡支付</string>
    <string name="wei_xin_pay_title">微信支付</string>
    <string name="wei_xin_pay_intro">推荐已在微信中绑定银行卡的用户使用</string>
    <string name="yin_lian_pay_title">银联在线支付</string>
    <string name="yin_lian_pay_intro">推荐已持有网银的用户使用</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="buy_right_now">立即购买</string>
    <string name="all_pro">全部</string>
    <string name="sum_all">合计：</string>
    <string name="pro_num">数量：</string>
    <string name="order_receiver">收货人:  </string>
    <string name="order_info">订单信息</string>
    <string name="order_pay_style">支付方式</string>
    <string name="sorry_you_dont_have_address_info">对不起，您还没有地址信息</string>
    <string name="click_here_to_fill_your_address_info">点此去完善收货地址吧</string>
    <string name="my_orders">我的订单</string>
    <string name="shop_order">商城订单</string>
    <string name="pay_history">缴费记录</string>
    <string name="my_activity">我的活动</string>
    <string name="my_complain">我的投诉</string>
    <string name="my_repair">我的报修</string>
    <string name="my_appointment">预约及到访</string>
    <string name="my_community_info">我的分类信息</string>
    <string name="my_express">我的快递</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_score">我的积分</string>
    <string name="have_paied">已缴费</string>
    <string name="havnt_paied">未缴费</string>
    <string name="pls_input">请输入</string>
    <string name="pls_choose">请选择</string>
    <string name="owner_name">业主姓名</string>
    <string name="mobile_num">手机号</string>
    <string name="community">小区</string>
    <string name="building_num">楼栋/弄</string>
    <string name="unit_num">单元/号</string>
    <string name="room_num">门牌/房号</string>
    <string name="confirm2">认证</string>
    <string name="house_pay">结算</string>
    <string name="search_range">查询范围</string>
    <string name="month">月份</string>
    <string name="year">年份</string>
    <string name="pay_time">缴费时间</string>
    <string name="pay_item">缴费项目</string>
    <string name="pay_amount">金额(元)</string>
    <string name="pay_clear">清空</string>
    <string name="activity_detail">活动详细>></string>
    <string name="all_act">全部活动</string>
    <string name="I_start_up">我发起的</string>
    <string name="I_take_in">我参与的</string>
    <string name="act_take_in">参加活动</string>
    <string name="member_already_take_in">已参加活动的人员</string>
    <string name="forum_exp_area">经验交流区</string>
    <string name="version_update_notice_area">版本更新公告</string>
    <string name="green_hand_notice">新人通知</string>
    <string name="essence_area">精品区</string>
    <string name="community_survey_area">社区调查</string>
    <string name="community_activity_area">社区活动</string>
    <string name="start_forum">发表帖子</string>
    <string name="start_activity">发起活动</string>
    <string name="title">标题</string>
    <string name="pls_input_content">请输入内容</string>
    <string name="pls_add_img">添加图片</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="activity_address">活动地点</string>
    <string name="next_step">下一步</string>
    <string name="release">发布</string>
    <string name="visitor">到 访 人: </string>
    <string name="host">拜访人: </string>
    <string name="room">拜访房间: </string>
    <string name="visitor_num">到访人数: </string>
    <string name="car_plate_num">车牌号: </string>
    <string name="host_tel">拜访人电话: </string>
    <string name="stay_time">预计停留时间: </string>
    <string name="visitor_img">到访人照片: </string>
    <string name="refuse_visit">拒绝到访</string>
    <string name="agree_visit">同意进入</string>
    <string name="not_at_home">我不在家</string>
    <string name="add">添加</string>
    <string name="done">完成</string>
    <string name="change"><u>切换</u></string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="prepay_id_wx_text">prepayid</string>
    <string name="invoke_ip">invoke_ip</string>
    <string name="prepay_id_value">wx20141126110244e3e4bc4e580111072793</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_file">发送文件</string>
    <string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>
    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>
    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>
    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>
    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
</resources>