<RelativeLayout
    android:id="@+id/mall_main_pop_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/header_height"
        android:orientation="vertical">

        <!--top背景部分-->
        <RelativeLayout
            android:id="@+id/main_top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/main_top_bg">

            <ImageView
                android:id="@+id/logo"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_property_logo"/>

            <LinearLayout
                android:padding="@dimen/activity_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/now_community_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:gravity="left"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/LargeTextSize"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/change_community_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/LargeTextSize"
                    android:textStyle="bold"
                    android:text="@string/change"/>
            </LinearLayout>

        </RelativeLayout>

        <!--主页按钮-->
        <ScrollView
            android:layout_below="@+id/main_top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_bg"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_bg"
                    android:orientation="horizontal">

                    <!--社区商城-->
                    <TextView
                        android:id="@+id/btn_community_mall"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_community_mall_icon"
                        android:text="@string/community_mall"/>

                    <!-- 温馨提示-->
                    <TextView
                        android:id="@+id/btn_community_notice"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_community_notice_icon"
                        android:text="@string/community_notice"/>

                    <!--家园活动-->
                    <TextView
                        android:id="@+id/btn_community_activity"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_community_activity_icon"
                        android:text="@string/community_activity"/>

                    <!--物业缴费-->
                    <TextView
                        android:id="@+id/btn_property_pay"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_property_pay_icon"
                        android:text="@string/property_pay"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_bg"
                    android:orientation="horizontal">

                    <!--家庭热线-->
                    <TextView
                        android:id="@+id/btn_complain_and_repair"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_complain_and_repair_icon"
                        android:text="@string/repair_complain"/>

                    <!--预约访客-->
                    <TextView
                        android:id="@+id/btn_appointment"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_appointment_icon"
                        android:text="@string/appointment"/>

                    <!--便民服务-->
                    <TextView
                        android:id="@+id/btn_easy_service"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_easy_service_icon"
                        android:text="@string/easy_service"/>

                    <!--即时通讯-->
                    <TextView
                        android:id="@+id/btn_communicate"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_communicate_icon"
                        android:text="@string/communicate"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_bg"
                    android:orientation="horizontal">

                    <!--社区论坛-->
                    <TextView
                        android:id="@+id/btn_community_forum"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_community_forum_icon"
                        android:text="@string/community_forum"/>

                    <!--社区分类信息-->
                    <TextView
                        android:id="@+id/btn_community_info"
                        style="@style/main_btn_style"
                        android:paddingTop="@dimen/activity_padding_small"
                        android:paddingBottom="@dimen/activity_padding_small"
                        android:paddingLeft="@dimen/activity_padding_smaller"
                        android:paddingRight="@dimen/activity_padding_smaller"
                        android:drawableTop="@drawable/main_community_info_icon"
                        android:text="@string/community_info"/>

                    <!--周边商家-->
                    <TextView
                        android:id="@+id/btn_shop_arround"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_shop_arround_icon"
                        android:text="@string/shop_arround"/>

                    <TextView
                        android:id="@+id/btn_express_receive"
                        style="@style/main_btn_style"
                        android:drawableTop="@drawable/main_express_receive_icon"
                        android:text="@string/express_receive"/>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <!--广告位-->
        <ImageView
            android:layout_above="@+id/footer_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/main_ad_01"/>

    </LinearLayout>

    <!--footer-->
    <include
        android:id="@+id/footer_layout"
        layout="@layout/main_menu_btns"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentBottom="true" />

</RelativeLayout>