<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/main_bg"
    android:layout_height="match_parent">

    <!--header-->
    <include
        android:id="@+id/header"
        layout="@layout/toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--标题-->
            <EditText
                android:id="@+id/act_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding"
                android:padding="@dimen/activity_padding_small"
                android:textSize="@dimen/LargeTextSize"
                android:textColor="@color/text_gray"
                android:hint="@string/title"
                android:background="@color/white"/>

            <!--开始时间-->
            <EditText
                android:id="@+id/act_start_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding"
                android:padding="@dimen/activity_padding_small"
                android:editable="false"
                android:textSize="@dimen/LargeTextSize"
                android:textColor="@color/text_gray"
                android:hint="@string/start_time"
                android:background="@color/white"/>

            <!--结束时间-->
            <EditText
                android:id="@+id/act_end_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding"
                android:padding="@dimen/activity_padding_small"
                android:editable="false"
                android:textSize="@dimen/LargeTextSize"
                android:textColor="@color/text_gray"
                android:hint="@string/end_time"
                android:background="@color/white"/>

            <!--活动地点-->
            <EditText
                android:id="@+id/act_address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding"
                android:padding="@dimen/activity_padding_small"
                android:textSize="@dimen/LargeTextSize"
                android:textColor="@color/text_gray"
                android:hint="@string/activity_address"
                android:background="@color/white"/>


        </LinearLayout>

    </ScrollView>



</RelativeLayout>