<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ctrl.android.property.jason.ui.JActivity.Location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <!--表头-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding"
        android:paddingRight="@dimen/activity_padding"
        android:orientation="horizontal">

        <!--缴费时间-->
        <TextView
            android:id="@+id/house_pay_history_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding_small"
            android:gravity="center"
            android:background="@color/light_gray"
            android:singleLine="true"
            android:textSize="@dimen/BasicTextSize"
            android:textColor="@color/text_black"
            android:text="@string/pay_time"/>

        <TextView
            android:layout_width="@dimen/between_element_margin"
            android:layout_height="match_parent"
            android:background="@color/dark_green"/>

        <!--缴费项目-->
        <TextView
            android:id="@+id/house_pay_history_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding_small"
            android:gravity="center"
            android:background="@color/light_gray"
            android:singleLine="true"
            android:textSize="@dimen/BasicTextSize"
            android:textColor="@color/text_black"
            android:text="@string/pay_item"/>

        <TextView
            android:layout_width="@dimen/between_element_margin"
            android:layout_height="match_parent"
            android:background="@color/dark_green"/>

        <!--缴费金额-->
        <TextView
            android:id="@+id/house_pay_history_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding_small"
            android:gravity="center"
            android:background="@color/light_gray"
            android:singleLine="true"
            android:textSize="@dimen/BasicTextSize"
            android:textColor="@color/text_black"
            android:text="@string/pay_amount"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/between_element_margin"
        android:layout_marginLeft="@dimen/activity_padding"
        android:layout_marginRight="@dimen/activity_padding"
        android:background="@color/dark_green"/>

    </LinearLayout>